--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Chris Lieb <chris.lieb@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+reqwest = { version = "0.10.7", features = [ "blocking" ] }
+serde = { version = "1.0.114", features = [ "derive" ] }
+serde_yaml = "0.8.13"
