--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ authors = ["Chris Lieb <chris.lieb@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+regex = "1.3.9"
 reqwest = { version = "0.10.7", features = [ "blocking" ] }
 serde = { version = "1.0.114", features = [ "derive" ] }
+serde_json = "1.0.57"
 serde_yaml = "0.8.13"
+
+[dev-dependencies]
+maplit = "1.0.2"
