--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ authors = ["Chris Lieb <chris.lieb@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-regex = "1.3.9"
-reqwest = { version = "0.10.7", features = [ "blocking" ] }
-serde = { version = "1.0.114", features = [ "derive" ] }
-serde_json = "1.0.57"
-serde_yaml = "0.8.13"
+actix-rt = "~1.1"
+actix-web = "~2.0"
+log = "~0.4"
+regex = "~1.3"
+reqwest = { version = "~0.10", features = [ "blocking" ] }
+serde = { version = "~1.0", features = [ "derive" ] }
+serde_json = "~1.0"
+serde_yaml = "~0.8"
+simplelog = "~0.8"
 
 [dev-dependencies]
-maplit = "1.0.2"
+maplit = "~1.0"
