--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 actix-rt = "~1.1"
 actix-web = "~2.0"
+clap = "~2.33.2"
 log = "~0.4"
 regex = "~1.3"
 reqwest = { version = "~0.10", features = [ "blocking" ] }
