--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,11 @@ actix-rt = "~1.1"
 actix-web = "~2.0"
 clap = "~2.33.3"
 log = "~0.4"
+maplit = "~1.0"
 regex = "~1.3"
 reqwest = { version = "~0.10", features = [ "blocking" ] }
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_json = "~1.0"
 serde_yaml = "~0.8"
 simplelog = "~0.8"
-
-[dev-dependencies]
-maplit = "~1.0"
+url = "~2.1.1"
