--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 [dependencies]
 actix-rt = "~1.1"
 actix-web = "~2.0"
+async-trait = "~0.1.38"
 clap = "~2.33.3"
+dyn-clone = "~1.0.2"
+futures = "~0.3.5"
 log = "~0.4"
 maplit = "~1.0"
 regex = "~1.3"
