--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ futures = "~0.3.5"
 log = "~0.4"
 maplit = "~1.0"
 regex = "~1.3"
-reqwest = { version = "~0.10", features = [ "blocking" ] }
+reqwest = "~0.10"
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_json = "~1.0"
 serde_yaml = "~0.8"
