--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ reqwest = "~0.10"
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_yaml = "~0.8"
 simplelog = "~0.8"
+time = "~0.2.16"
 url = "~2.1.1"
