--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: build
-        args: --target armv7-unknown-linux-gnueabihf --release
+        args: --release
 
   linux_armv7:
     name: Linux ARMv7
