--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -78,13 +78,7 @@ jobs:
           profile: minimal
           target: armv7-unknown-linux-gnueabihf
           override: true
-      - name: test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
       - name: build_release
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release
+        run: |
+          cargo install cross
+          cross build --target armv7-unknown-linux-gnueabihf --release
