--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,6 +1,4 @@
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -28,8 +26,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
 
-  linux_x64:
-    name: Linux x86-64
+  test:
+    name: tests
     runs-on: ubuntu-latest
 
     steps:
@@ -50,34 +48,3 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: test
-    - name: build_release
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
-        args: --release
-
-  linux_armv7:
-    name: Linux ARMv7
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-armv7-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - run: |
-          docker build .github/docker -f .github/docker/Dockerfile.armv7 -t cross-armv7:latest
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          target: armv7-unknown-linux-gnueabihf
-          override: true
-      - name: build_release
-        run: |
-          cargo install cross
-          cross build --target armv7-unknown-linux-gnueabihf --release
