--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,11 @@ on:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  release:
-    name: Release
+  #------------------------------------------------------------
+  # test everything before generating release artifacts
+  #------------------------------------------------------------
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -17,24 +20,42 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-release-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+      - name: test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+
+  #------------------------------------------------------------
+  # generate release bundles for all platforms
+  #------------------------------------------------------------
+  build_x86_64:
+    name: Build x86_64
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-release-x86_64-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: "x86_64: install_toolchain"
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           profile: minimal
           override: true
-
-      # test everything before generating release artifacts
-      - name: test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-
       - name: get_release_version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-
-      # release x86_64
       - name: "x86_64: build_release"
         uses: actions-rs/cargo@v1
         with:
@@ -43,9 +64,27 @@ jobs:
       - name: "x86_64: build_bundle"
         run: |
           tar -czf tomato-exporter-${{ steps.get_version.outputs.VERSION }}.x86_64.tar.gz -C ./target/release/ tomato-exporter
+      - name: "x86_64: upload_bundle"
+        uses: actions/upload-artifact@v2
+        with:
+          name: bundle-x86_64
+          path: tomato-exporter-${{ steps.get_version.outputs.VERSION }}.x86_64.tar.gz
 
-      # release ARMv7
-      - name: "armv7: build_env:"
+  build_armv7:
+    name: Build ARMv7
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-release-armv7-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: "armv7: build_env"
         run: |
           docker build .github/docker -f .github/docker/Dockerfile.armv7 -t cross-armv7:latest
       - name: "armv7: install_toolchain"
@@ -55,6 +94,9 @@ jobs:
           profile: minimal
           target: armv7-unknown-linux-gnueabihf
           override: true
+      - name: get_release_version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: "armv7: build_release"
         run: |
           cargo install cross
@@ -62,8 +104,34 @@ jobs:
       - name: "armv7: build_bundle"
         run: |
           tar -czf tomato-exporter-${{ steps.get_version.outputs.VERSION }}.armv7.tar.gz -C ./target/armv7-unknown-linux-gnueabihf/release/ tomato-exporter
+      - name: "armv7: upload_bundle"
+        uses: actions/upload-artifact@v2
+        with:
+          name: bundle-armv7
+          path: tomato-exporter-${{ steps.get_version.outputs.VERSION }}.armv7.tar.gz
 
-      # create GitHub release and attach artifacts
+  #------------------------------------------------------------
+  # gather all release bundles and create GitHub release
+  #------------------------------------------------------------
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs:
+      - build_x86_64
+      - build_armv7
+
+    steps:
+      - name: get_release_version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: "x86_64: download_bundle"
+        uses: actions/download-artifact@v2
+        with:
+          name: bundle-x86_64
+      - name: "armv7: download_bundle"
+        uses: actions/download-artifact@v2
+        with:
+          name: bundle-armv7
       - name: create_github_release
         uses: softprops/action-gh-release@v1
         with:
