--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ futures = "~0.3.5"
 log = "~0.4"
 maplit = "~1.0"
 regex = "~1.3"
-reqwest = "~0.10"
+reqwest = { version = "~0.10", features = [ "rustls-tls" ], default-features = false }
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_yaml = "~0.8"
 simplelog = "~0.8"
