--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 
 [dependencies]
 actix-rt = "~1.1"
-actix-web = "~3.0"
+actix-web = { version = "~2.0", features = [ "rustls" ] }
 async-trait = "~0.1.40"
 clap = "~2.33.3"
+derive_more = { version = "~0.99.9", features = [ "from", "display" ], default-features = false }
 dyn-clone = "~1.0.2"
 futures = "~0.3.5"
 log = "~0.4"
 maplit = "~1.0"
 regex = "~1.3"
-reqwest = { version = "~0.10", features = [ "rustls-tls" ], default-features = false }
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_yaml = "~0.8"
 simplelog = "~0.8"
