--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.8.6"
 authors = ["Christopher Lieb <chris.lieb@gmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
+resolver = "2"
 
 [dependencies]
 actix-rt = "~1.1"
