--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ actix-web = "~4.0"
 async-trait = "~0.1.53"
 clap = { version = "~3.1", features = [ "cargo" ] }
 dyn-clone = "~1.0.5"
+env_logger = "~0.9.0"
 futures = "~0.3.21"
 log = "~0.4"
 maplit = "~1.0"
@@ -17,6 +18,5 @@ regex = "~1.5"
 reqwest = { version = "~0.11", features = [ "rustls-tls" ], default-features = false }
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_yaml = "~0.8"
-simplelog = "~0.11"
 time = "~0.3.9"
 url = "~2.2.2"
