--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,19 @@ edition = "2021"
 
 [dependencies]
 actix-web = "~4.1"
+ansi_term = "~0.12.1"
 async-trait = "~0.1.57"
 clap = { version = "~3.2", features = [ "cargo" ] }
 dyn-clone = "~1.0.9"
-env_logger = "~0.9.0"
 futures = "~0.3.23"
-log = "~0.4"
 maplit = "~1.0"
 regex = "~1.6"
 reqwest = { version = "~0.11", features = [ "rustls-tls" ], default-features = false }
 serde = { version = "~1.0", features = [ "derive" ] }
 serde_yaml = "~0.9"
 time = "~0.3.13"
+tracing = "~0.1.36"
+tracing-actix-web = "~0.6.0"
+tracing-log = "~0.1.3"
+tracing-subscriber = "~0.3.15"
 url = "~2.2.2"
