--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "~4.1"
-ansi_term = "~0.12.1"
 async-trait = "~0.1.57"
 clap = { version = "~3.2", features = [ "cargo" ] }
 dyn-clone = "~1.0.9"
@@ -23,3 +22,6 @@ tracing-actix-web = "~0.6.0"
 tracing-log = "~0.1.3"
 tracing-subscriber = "~0.3.15"
 url = "~2.2.2"
+
+[target.'cfg(windows)'.dependencies]
+nu-ansi-term = "~0.46.0"
