--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ maplit = "~1.0"
 regex = "~1.10"
 reqwest = { version = "~0.12", features = [ "rustls-tls" ], default-features = false }
 serde = { version = "~1.0", features = [ "derive" ] }
-serde_yaml = "~0.9"
+serde_json = "~1.0.115"
 time = "~0.3.34"
 tracing = "~0.1.40"
 tracing-actix-web = "~0.7.10"
